--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,21 @@ body {
     bottom: -80px;
 }
 
-/* .article-wrap */
+/*============= #main ==============*/
+.subpage > h2, .subpage > h3 {
+    text-align: center;
+    text-transform: uppercase;
+}
+.subpage > h2 {
+    margin-top: 120px;
+    font-size: 32px;
+}
+.subpage > h3 {
+    margin-top: 10px;
+    font-size: 18px;
+    color: rgba(102, 102, 102, 0.5);
+}
+/*============== .article-wrap =================*/
 .article-wrap {
     max-width: 1000px; /* 반응형 속성 */
     margin: 100px auto;
@@ -91,10 +105,6 @@ body {
 }
 .article-wrap article {
     float: left;
-}
-.article-wrap article:nth-child(1) {
-    width: 681px;
-    overflow: hidden;
 }
 .article-wrap article h2 {
     text-transform: capitalize;
@@ -148,23 +158,125 @@ body {
 .cart:hover .material-icons.md-light{
     color: rgba(125,125,0,1);
 }
-.buy {
-    
-}
 .theraphy-items li:nth-child(1) { 
     margin-right: 21px;
 }
 .theraphy-items li:nth-child(2) { 
     margin-right: 22px;
 }
-/* sample.html > sample_order form */
+
+/*==============sample.html > sample-order form=================*/
+.subpage .article-wrap article:nth-child(1) {
+    width: 100%;
+    overflow: hidden;
+}
+.form-wrap h3 {
+    padding-bottom: 20px;
+}
+.user-form {
+    color: white;
+    background: #604449;
+    padding: 50px 50px 30px 50px;
+    box-sizing: border-box;
+}
+.user-form li {
+    margin-bottom: 30px;
+}
+.user-form label {
+    margin-right: 20px;
+    display: inline-block;
+    width: 80px;
+    font-size: 16px;
+}
+.user-form input {
+    height: 50px;
+    text-indent: 20px; /* 텍스트 들여쓰기 */
+    border-radius: 30px;
+    border: 1px solid #ddd;
+    outline: none;
+}
+/* .user-form input:focus { 폼 요소 클릭시
+    background: #ddd;
+} */
+#userName, #userEmail, #userSns {
+    width: calc(100% - 130px);
+}
+#userAddress1 {
+    width: calc(100% - 235px);
+    margin-bottom: 20px;
+}
+#userAddress2 {
+    margin-left: 105px;
+    width: calc(100% - 235px);
+}
+#searchAddress {
+    text-indent: 0;
+    width: 100px;
+    height: 50px;
+    vertical-align: top;
+    background: #f1f1f1;
+    color: black;
+}
+.agreement-form h3 {
+    margin-top: 150px;
+    padding-bottom: 20px;
+}
+.agreement {
+    border: 1px solid #666;
+    height: 100px;
+    padding: 50px;
+    background: #f1f1f1;
+    overflow: hidden scroll; /* 넘치면 x축 숨기고, y축 스크롤 */
+}
+.agreement-box {
+    margin: 20px 0 50px;
+    
+}
+input[type=checkbox] {/* 속성 선택자, html 속성을 기준으로 선택 */
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+input[type=checkbox] + label {
+    font-size: 1rem;
+}
+input[type=checkbox] :checked {
+    color: #604449;
+}
+.btns {
+    text-align: center;
+    margin-bottom: 200px;
+    margin-top: 100px;
+}
+.btns input[type=submit] {
+    background: #604449;
+    color: white;
+    width: 250px;
+    height: 70px;
+    font-size: 1.250rem;
+    border: 0;
+    margin-right: 10px;
+}
+.btns input[type=reset] {
+    background: white;
+    color: #604449;
+    width: 250px;
+    height: 70px;
+    font-size: 1.250rem;
+    border: 1px solid #604449;
+}
+.btns input[type=reset]:hover {
+    background: #666;
+    color: white;
+}
+.btns input[type=submit]:hover {
+    background: #666;
+    color: white;
+}
 
 
-
-
-
-
-/* .aside-wrap */
+/*================= .aside-wrap ==========================*/
 .fullwidth-wrap {
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
@@ -194,7 +306,7 @@ body {
     font-size: 14px;
     color: #666;
 }
-/* .footer-wrap */
+/*====================== .footer-wrap =========================*/
 .footer-wrap {
     max-width: 1000px;
     margin: 0 auto;
@@ -207,9 +319,12 @@ body {
     display: inline-block;
     padding: 10px;
 }
+address {
+    font-style: normal;
+}
 address p{
     display: inline-block;
-    padding: 5px;
+    padding: 8px;
 }
 p.copyright {
     display: block;
@@ -219,6 +334,6 @@ p.copyright {
     position: absolute;
     right: 0;
 }
-/* .footer {
+/*============= .footer {
     clear: both;
-} */
+} =============*/
